# fairypieces-pgn

./: .gitignore  Cargo.toml  README.md
resources/: lichess_db_standard_rated_2013-01_truncated_50.pgn  lichess_db_standard_rated_2013-01_truncated_500.pgn  lichess_db_standard_rated_2013-01_truncated_5000.pgn
src/: lib.rs  tests.rs
