[package]
name = "fairypieces-pgn"
version = "0.1.0"
authors = ["Jakub Hlusička <limeth@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
concurrency = ["rayon"]
default = ["concurrency"]

[dependencies]
fairypieces-engine = { git = "https://github.com/fairypieces/fairypieces-engine.git" }
pgn-reader = "0.17.0"
rayon = { version = "1.5.0", optional = true }

[profile.dev]
opt-level = 3 # all optimizations
debug-assertions = true

[profile.release]
debug = true
